--- a/app/views/course/degree-level.html
+++ b/app/views/course/degree-level.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "What is the minimum degree classification required?" %}
+{% set title = "What is the minimum degree classification you require?" %}
 {% set backLink = course.path + "/degree" %}
 
 {% if course.name === "Primary" %}
