--- a/app/views/courses/index.html
+++ b/app/views/courses/index.html
@@ -45,8 +45,10 @@
             <th class="govuk-table__header">
               {% if data["next-cycle"] %}Will it be{% else %}Is it{% endif %} on <abbr title="Find postgraduate teacher training">Find</abbr>?
             </th>
-            <th class="govuk-table__header">Applications</th>
-            <th class="govuk-table__header">Vacancies</th>
+            {% if data["placements-policy"] == "hosted" %}
+              <th class="govuk-table__header">Applications</th>
+              <th class="govuk-table__header">Vacancies</th>
+            {% endif %}
           </tr>
         </thead>
         <tbody class="govuk-table__body">
