--- a/app/views/includes/_courses-table-row.html
+++ b/app/views/includes/_courses-table-row.html
@@ -27,30 +27,32 @@
       <span class="govuk-tag phase-tag-no-content">New</span>
     {% endif %}
   </td>
-  <td class="govuk-table__cell">
-    {% if data[course.programmeCode + '-publish-state'] == 'withdrawn' %}
-      No – withdrawn
-    {% elseif (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-publish-state'] == 'published-with-changes') %}
-      {% if data['next-cycle'] %}
-        Yes – in October
+  {% if data["placements-policy"] == "hosted" %}
+    <td class="govuk-table__cell">
+      {% if data[course.programmeCode + '-publish-state'] == 'withdrawn' %}
+        No – withdrawn
+      {% elseif (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-publish-state'] == 'published-with-changes') %}
+        {% if data['next-cycle'] %}
+          Yes – in October
+        {% else %}
+          <a href="#">Yes – view online</a>
+        {% endif %}
       {% else %}
-        <a href="#">Yes – view online</a>
+        No – still in draft
       {% endif %}
-    {% else %}
-      No – still in draft
-    {% endif %}
-  </td>
-  <td class="govuk-table__cell">
-    {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-publish-state'] == 'published-with-changes') %}
-      {% if data['next-cycle'] %}
-        Opening on 10 October
-      {% elseif data[course.programmeCode + '-vacancies-flag'] == 'No' %}
-        Closed
-      {% else %}
-        Open
+    </td>
+    <td class="govuk-table__cell">
+      {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-publish-state'] == 'published-with-changes') %}
+        {% if data['next-cycle'] %}
+          Opening on 10 October
+        {% elseif data[course.programmeCode + '-vacancies-flag'] == 'No' %}
+          Closed
+        {% else %}
+          Open
+        {% endif %}
       {% endif %}
-    {% endif %}
-  </td>
+    </td>
+  {% endif %}
   <td class="govuk-table__cell">
     {% if data[course.programmeCode + '-publish-state'] == 'withdrawn' %}
       No
