--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -110,7 +110,7 @@
 {% block bodyEnd %}
   </div>
   {% block scripts %}
-    {# data | log #}
+    {{ data | log }}
     {% include "includes/scripts.html" %}
     {% block pageScripts %}{% endblock %}
   {% endblock %}
