Reword "accept" to "consider"

--- a/app/views/course/gcses-pending-or-equivalency-tests.html
+++ b/app/views/course/gcses-pending-or-equivalency-tests.html
@@ -17,7 +17,7 @@
         name: pendingGcsesRadioName,
         fieldset: {
           legend: {
-            text: "Will you accept candidates with pending GCSEs?",
+            text: "Will you consider candidates with pending GCSEs?",
             classes: "govuk-fieldset__legend--m"
           }
         },
@@ -90,7 +90,7 @@
         name: equivalencyTestsRadioName,
         fieldset: {
           legend: {
-            text: "Will you accept candidates who need to take an equivalency test in English, maths or science?",
+            text: "Will you consider candidates who need to take an equivalency test in English, maths or science?",
             classes: "govuk-fieldset__legend--m"
           }
         },
