Update hint text

--- a/app/views/course/gcses-pending-or-equivalency-tests.html
+++ b/app/views/course/gcses-pending-or-equivalency-tests.html
@@ -22,7 +22,7 @@
           }
         },
         hint: {
-          text: "These are candidates who expect to have the qualification before the beginning of the course. If successful they would receive a conditional offer."
+          text: "These are candidates who expect to have the qualification before the beginning of the course. You can give them an offer, on the condition that they pass their GCSEs."
         },
         items: [{
           value: "true",
