WIP: Placements wizard

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -105,6 +105,7 @@
 
 {% block bodyStart %}
   <div data-module="edge">
+    <pre>{{ paths | dump(2) }}</pre>
 {% endblock %}
 
 {% block bodyEnd %}
