--- a/app/views/locations/upload-review.html
+++ b/app/views/locations/upload-review.html
@@ -1,23 +1,13 @@
 {% extends "layout.html" %}
 {% set title = "Review locations" %}
-
-{% block pageNavigation %}
-  {{ govukBreadcrumbs({
-    items: breadcrumbItems([{
-      href: "/locations",
-      text: "Locations"
-    }, {
-      text: title
-    }])
-  )) }}
-{% endblock %}
+{% set backLink = referrer or paths.back %}
 
 {% block content %}
-  <form action="/locations/?success=uploaded" method="post">
+  <form action="/locations?sucess=uploaded" method="post">
     <h1 class="govuk-heading-xl">
+      <span class="govuk-caption-xl">Locations</span>
       {{ title }}
     </h1>
-
 
     <h2 class="govuk-heading-m">{{ data.uploadedLocations | length }} recognised locations found</h2>
     <table class="govuk-table app-table--vertical-align-middle">
@@ -56,7 +46,7 @@
         text: "Add selected locations"
       }) }}
 
-      <a class="govuk-link" href="/locations">Cancel</a>
+      <a class="govuk-link" href="{{ paths.back }}">Cancel</a>
     </div>
   </form>
 {% endblock %}
