--- a/app/views/locations/add.html
+++ b/app/views/locations/add.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
-{% set title = "Can candidates choose a school when they apply?" %}
+{% set title = "How do you want to add placement schools?" %}
 {% set backLink = referrer or paths.back %}
 
 {% block content %}
   <form action="{{ referrer or paths.next }}" method="post" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {{ govukRadios({
-        idPrefix: "placements-policy",
-        name: "placements-policy",
+        idPrefix: "add-placements-answer",
+        name: "add-placements-answer",
         fieldset: {
           legend: {
             html: "<span class=\"govuk-caption-xl\">Locations</span>" + title,
@@ -16,24 +16,24 @@
           }
         },
         items: [{
-          value: "hosted",
-          text: "Yes",
-          checked: checked(("placements-policy"), "hosted"),
+          value: "upload",
+          text: "Upload a list of Unique reference numbers (URNs)",
+          checked: checked(("placements-display"), "list"),
           label: {
             classes: "govuk-label--s"
           },
           hint: {
-            text: "You can manage vacancies for each course from the ‘Courses’ page"
+            text: "Lorem ipsum CSV lorem ipsum URNs"
           }
         }, {
-          value: "placed",
-          text: "No",
-          checked: checked(("placements-policy"), "placed"),
+          value: "add",
+          text: "Add each school individually",
+          checked: checked(("placements-display"), "area"),
           label: {
             classes: "govuk-label--s"
           },
           hint: {
-            text: "Placements are arranged with candidates before their training starts"
+            text: "Lorem ipsum"
           }
         }]
       }) }}
@@ -42,7 +42,7 @@
         {{ govukButton({
           text: "Save changes" if referrer else "Save and continue"
         }) }}
-        <p class="govuk-body"><a href="{{ referrer or paths.back }}">Cancel</a></p>
+        <p class="govuk-body"><a href="{{ paths.back }}">Cancel</a></p>
       </div>
     </div>
   </form>
