--- a/app/views/locations/placements-display.html
+++ b/app/views/locations/placements-display.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% set title = "How do you want to manage placement schools?" %}
-{% set backLink = referrer %}
+{% set backLink = referrer or paths.back %}
 
 {% block content %}
-  <form action="{{ referrer or "/locations/placements-policy" }}" method="post" class="govuk-grid-row">
+  <form action="{{ referrer or paths.next }}" method="post" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {{ govukRadios({
         idPrefix: "placements-display",
@@ -42,7 +42,7 @@
         {{ govukButton({
           text: "Save changes" if referrer else "Save and continue"
         }) }}
-        <p class="govuk-body"><a href="{{ backLink }}">Cancel</a></p>
+        <p class="govuk-body"><a href="{{ referrer or paths.back }}">Cancel</a></p>
       </div>
     </div>
   </form>
