--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Sign in to Publish teaching training" %}
+{% set title = "Sign in" %}
 
 {% block header %}
   {{ govukHeader({
@@ -13,18 +13,18 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">
+      <h1 class="govuk-heading-xl">
         {{ title }}
       </h1>
 
-      <p class="govuk-body-m">Use DfE Sign-in to access your account.</p>
+      <p class="govuk-body-l">You must sign in to your account to publish teacher training courses.</p>
 
       {{ govukButton({text: "Sign in using DfE Sign-in", href: "/rolled-over?from=sign-in"}) }}
 
-      <p class="govuk-body-m">
-        If you do not have a DfE Sign-in account but need access to Publish teaching training email <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.
-      </p>
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+      <h2 class="govuk-heading-m">Ask for an account</h2>
+      <p class="govuk-body">Do not have an account? You can get one by emailing <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher<wbr>@digital.education.gov.uk</a>.</p>
     </div>
   </div>
 {% endblock %}
