--- a/app/views/about-your-organisation/about.html
+++ b/app/views/about-your-organisation/about.html
@@ -70,7 +70,7 @@
       </div>
 
       <div class="govuk-grid-column-one-third">
-        <div class="status-box govuk-!-margin-bottom-6">
+        <div class="app-status-box govuk-!-margin-bottom-6">
           {{ macros.formatting() }}
         </div>
       </div>
