--- a/app/views/accredited-body/index.html
+++ b/app/views/accredited-body/index.html
@@ -58,7 +58,7 @@
       </table> -->
     </div>
     <div class="govuk-grid-column-one-third">
-      <div class="status-box">
+      <div class="app-status-box">
         {# <h2 class="govuk-heading-m govuk-!-margin-top-2">
           <a href="/notifications">Notifications</a>
         </h2>
