--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -484,7 +484,7 @@
         {% endif %}
       </div>
       <div class="govuk-grid-column-one-third">
-        <div class="status-box">
+        <div class="app-status-box">
           <h2 class="govuk-heading-m">Changing the details of this course</h2>
           {% if isNotPublished %}
             <p>You can change every detail of this course before it’s published.</p>
