--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="govuk-grid-column-one-third">
-      <div class="status-box">
+      <div class="app-status-box">
         <h2 class="govuk-heading-m">Prepare for the next cycle</h2>
         <p class="govuk-body">Courses for the next cycle will be published on 1&nbsp;September&nbsp;2021.</p>
         <p class="govuk-body"><a href="/rolled-over?from=cycles" class="govuk-link">What you need to do</a></p>
