--- a/app/views/organisation/index.html
+++ b/app/views/organisation/index.html
@@ -131,7 +131,7 @@
 
     <div class="govuk-grid-column-one-third">
       {% if not data["rolled-over"] %}
-        <div class="status-box">
+        <div class="app-status-box">
           <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
             <a href="/users/">Users</a>
           </h2>
