--- a/app/views/organisation/notification-enabled.html
+++ b/app/views/organisation/notification-enabled.html
@@ -99,7 +99,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
       {% if not data["rolled-over"] %}
-      <div class="status-box">
+      <div class="app-status-box">
         {# <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/notifications">Email notifications</a>
         </h2>
@@ -128,7 +128,7 @@
       {% endif %}
     </div>
     <!-- <div class="govuk-grid-column-one-third">
-      <div class="status-box">
+      <div class="app-status-box">
         <h2 class="govuk-heading-m">Guidance</h2>
         <ul class="govuk-list">
           <li>
