--- a/app/views/organisations/index.html
+++ b/app/views/organisations/index.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
     <!-- <div class="govuk-grid-column-one-third">
-      <div class="status-box">
+      <div class="app-status-box">
         <h2 class="govuk-heading-m">Support and guidance</h2>
         <p class="govuk-body">If you have a question, or you’ve had a problem using Publish, you can email:</p>
         <p class="govuk-body govuk-!-margin-bottom-0">
