Fix bulk upload

--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -85,7 +85,7 @@
           {% else %}
             <p class="govuk-body">Based on the school locations you have added, courses will show the following areas:</p>
             <div class="app-status-box">
-              <p class="govuk-body govuk-!-margin-bottom-0">Leeds, Bradford and Halifax.</p>
+              <p class="govuk-body govuk-!-margin-bottom-0">Bradford, Leeds and Wakefield.</p>
             </div>
           {% endif %}
           <p class="govuk-body"><a class="govuk-link govuk-link--no-visited-state" href="/locations/placements-display">Update placement school settings</a></p>
@@ -99,7 +99,7 @@
           text: "Add a new placement school",
           href: "/location/start?type=school"
         }) }}
-        <a class="govuk-link govuk-link--no-visited-state" href="/location/upload">Upload schools CSV</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="/locations/upload">Upload schools CSV</a>
       </div>
     {% else %}
       <div class="govuk-!-width-two-thirds">
