--- a/app/views/locations/upload-review.html
+++ b/app/views/locations/upload-review.html
@@ -3,7 +3,7 @@
 {% set backLink = referrer or paths.back %}
 
 {% block content %}
-  <form action="/locations?sucess=uploaded" method="post">
+  <form action="/locations?success=uploaded" method="post">
     <h1 class="govuk-heading-xl">
       <span class="govuk-caption-xl">Locations</span>
       {{ title }}
