--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -156,7 +156,7 @@
           </table>
         {% elif data["placements-display"] == "area" and course.schools.length > 0 %}
           {# List areas placement schools lie within #}
-          <p class="govuk-body">You may be placed in schools located near Leeds, Bradford and Halifax.</p>
+          <p class="govuk-body">You may be placed in schools located near Bradford, Leeds and Wakefield.</p>
         {% else %}
           {# Show missing message #}
           <div class="govuk-inset-text app-inset-text app-inset-text--important">
